Self/playorg/Unpackaged/Config/objects/Assessment_Response__c.object
<CustomObject>
    <description>ASSESSMENT  - Individual score valiues for a person&apos;s assessmemt</description>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Assessment_Question__c</referenceTo>
        <relationshipLabel>Assessment Response</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating / Score entered by user</description>
        <label>Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoreOld__c</fullName>
        <formula>CASE( Rating__c , &apos;0&apos;, 0, &apos;1&apos;, 1, &apos;2&apos;, 2, &apos;3&apos;, 6, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A field for confirming that no duplicate entries are saved for assessments.</description>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Assessment Response</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AssessmentResponseID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Submitted</fullName>
        <active>true</active>
        <description>A rule to lock an assessment upon submission for approval.</description>
        <errorConditionFormula>Question__r.Question_Domain__r.Assessment__r.Submitted__c</errorConditionFormula>
        <errorMessage>This assessment has been submitted for approval and cannot be edited.</errorMessage>
    </validationRules>
</CustomObject>